# titan

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.toml
contracts/openzeppelin/ERC20/core/: Avarice.sol  ERC20.sol  Token.sol
examples/: BUSDImplementation.sol
src/: eip1559.rs  erc20.rs  main.rs  simple_transactions.rs
src/contracts/: avarice.rs  mod.rs
src/contracts/utils/: compilers.rs
src/launch/: client.rs  helpers.rs  mod.rs  wallet.rs
